--- a/resources/assets/styles/skhoop/sections/_product-filter.scss
+++ b/resources/assets/styles/skhoop/sections/_product-filter.scss
@@ -1,65 +1,57 @@
-.product-filter {
-  & > .container {
+// Category Selector
+.category-selector {
+  float: left;
+  padding-left: 2.1875rem;
+  margin-right: 1.5625rem;
+  margin-bottom: 0;
+  list-style: none;
+
+  @include media-breakpoint-up(xl) {
+    margin-right: 3.75rem;
+  }
+
+  &:last-of-type {
+    margin-right: 0;
+  }
+
+  li {
+    margin-bottom: 0.9375rem;
+    height: 100%;
+
     @include media-breakpoint-up(lg) {
-      max-width: calc(100% - 60px);
-    }
-
-    @include media-breakpoint-up(xl) {
-      max-width: 1210px;
-    }
-
-    @include media-breakpoint-up(xxl) {
-      max-width: 1210px;
+      margin-bottom: 0.625rem;
     }
   }
 
-  .filter-container,
-  .sort-container {
-    border-top: 0.0625rem solid $green;
-
-    .column {
-      padding-left: 0.9375rem;
-      padding-right: 0.9375rem;
-    }
+  .custom-control {
+    padding-left: 0;
   }
 
-  .filter-container {
-    .column {
-      float: left;
-      width: auto;
-      margin-right: 3.125rem;
-
-      &:last-of-type {
-        margin-right: 0;
-      }
-    }
-  }
-
-  .sort-container {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-
-    .btn-group {
-      .btn {
-        border-radius: 1.25rem;
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
-        margin-left: 0.3125rem;
-        margin-right: 0.3125rem;
-      }
-    }
+  .custom-control-label {
+    padding-left: 0.5625rem;
   }
 }
 
 .size-selector,
 .color-selector {
   padding-left: 0;
+  margin-left: -0.625rem;
+  margin-right: -0.625rem;
   margin-bottom: 0;
   list-style: none;
 
+  @include media-breakpoint-up(lg) {
+    margin-left: -0.1563rem;
+    margin-right: -0.1563rem;
+  }
+
+  @include media-breakpoint-up(xl) {
+    margin-left: -0.3125rem;
+    margin-right: -0.3125rem;
+  }
+
   .custom-control {
     padding-left: 0;
-    margin-right: 0.5625rem;
   }
 
   .custom-checkbox {
@@ -69,16 +61,20 @@
       border-radius: 50%;
       border: 1px solid #e4e4e4;
       cursor: pointer;
-
-      &::before,
-      &::after {
-        display: none;
-      }
     }
   }
 
   li {
-    display: inline-block;
+    margin: 0 0.625rem 1.25rem;
+    float: left;
+
+    @include media-breakpoint-up(lg) {
+      margin: 0.1563rem;
+    }
+
+    @include media-breakpoint-up(xl) {
+      margin: 0.3125rem;
+    }
 
     &:last-child {
       .custom-control {
@@ -88,9 +84,32 @@
   }
 }
 
+// Color Selector
+.color-selector {
+  .custom-checkbox {
+    .custom-control-label {
+      border: none;
+
+      &::before {
+        display: none;
+      }
+
+      &::after {
+        @include center(both);
+      }
+    }
+  }
+}
+
+// Size Selector
 .size-selector {
   .custom-checkbox {
     .custom-control-label {
+      &::before,
+      &::after {
+        display: none;
+      }
+
       span {
         @include center(both);
 
@@ -108,8 +127,6 @@
     }
 
     .custom-control-input:disabled ~ .custom-control-label {
-      cursor: default;
-
       &::before {
         content: "";
         position: absolute;
@@ -126,6 +143,165 @@
         opacity: 0.5;
         transform: translate(-50%, -50%) rotate(225deg);
       }
+    }
+  }
+}
+
+// Product Filter
+//
+// ================================================
+.product-filter {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  padding: 0 1.875rem 1.25rem;
+  background-color: $body-bg;
+
+  @include media-breakpoint-up(lg) {
+    @include center(horizontal);
+
+    top: auto;
+    height: auto;
+    padding: 0;
+  }
+
+  & > .container {
+    @include media-breakpoint-up(lg) {
+      max-width: calc(100% - 60px);
+    }
+
+    @include media-breakpoint-up(xl) {
+      max-width: 1210px;
+    }
+
+    @include media-breakpoint-up(xxl) {
+      max-width: 1210px;
+    }
+  }
+
+  .filter-container,
+  .sort-container {
+    @include media-breakpoint-up(lg) {
+      border-top: 0.0625rem solid $green;
+    }
+
+    .column {
+      width: 100%;
+      border-bottom: 0.0625rem solid $green;
+
+      @include media-breakpoint-up(lg) {
+        padding-left: 0.9375rem;
+        padding-right: 0.9375rem;
+        width: auto;
+        border-bottom: none;
+      }
+
+      .title {
+        position: relative;
+        padding: 1.25rem 0;
+        margin-bottom: 0;
+        cursor: pointer;
+
+        @include media-breakpoint-up(lg) {
+          padding: 0;
+          margin-bottom: 0.5rem;
+          cursor: default;
+        }
+
+        &::after {
+          content: "+";
+          position: absolute;
+          right: 0.25rem;
+
+          @include media-breakpoint-up(lg) {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+
+  // Filter Container
+  .filter-container {
+    @include media-breakpoint-up(lg) {
+      padding-top: 1.25rem;
+      padding-bottom: 1.25rem;
+    }
+
+    @include media-breakpoint-up(xl) {
+      padding-left: 0.625rem;
+      padding-right: 0.625rem;
+    }
+
+    .column {
+      @include media-breakpoint-up(lg) {
+        float: left;
+        margin-right: 0.9375rem;
+      }
+
+      @include media-breakpoint-up(xl) {
+        margin-right: 3.125rem;
+      }
+
+      &:last-of-type {
+        margin-right: 0;
+      }
+    }
+
+    .color-selector {
+      @include media-breakpoint-up(lg) {
+        max-width: 21.25rem;
+      }
+
+      @include media-breakpoint-up(xl) {
+        max-width: 22.8125rem;
+      }
+    }
+
+    .size-selector {
+      @include media-breakpoint-up(lg) {
+        max-width: 19.0625rem;
+      }
+    }
+  }
+
+  // Sort Container
+  .sort-container {
+    @include media-breakpoint-up(lg) {
+      padding-top: 1.25rem;
+      padding-bottom: 1.25rem;
+    }
+
+    .btn-group {
+      .btn {
+        border-radius: 1.25rem;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        margin-left: 0.3125rem;
+        margin-right: 0.3125rem;
+        margin-bottom: 1.25rem;
+
+        @include media-breakpoint-up(lg) {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  // Button Container
+  .button-container {
+    .row .column {
+      padding: 0.9375rem 0;
+      width: 100%;
+    }
+
+    hr {
+      margin-top: 0;
+      margin-bottom: 0;
+      border-top: 1px solid $green;
     }
   }
 }
